feat: Implement Drag & Drop for block addition

--- a/index.html
+++ b/index.html
@@ -25,52 +25,46 @@
                 </div>
             </div>
             <div class="tools-grid">
-                <button class="tool-btn" data-type="header">
+                <div class="tool-btn" draggable="true" data-type="header">
                     <i class="fas fa-heading"></i>
                     <span>헤드(제목)</span>
-                </button>
-                <button class="tool-btn" data-type="text">
+                </div>
+                <div class="tool-btn" draggable="true" data-type="text">
                     <i class="fas fa-font"></i>
                     <span>텍스트</span>
-                </button>
-                <button class="tool-btn" data-type="image">
+                </div>
+                <div class="tool-btn" draggable="true" data-type="image">
                     <i class="fas fa-image"></i>
                     <span>이미지</span>
-                </button>
-                <button class="tool-btn" data-type="slide">
+                </div>
+                <div class="tool-btn" draggable="true" data-type="slide">
                     <i class="fas fa-images"></i>
                     <span>슬라이드</span>
-                </button>
-                <button class="tool-btn" data-type="gallery">
+                </div>
+                <div class="tool-btn" draggable="true" data-type="gallery">
                     <i class="fas fa-th-large"></i>
                     <span>갤러리</span>
-                </button>
-                <button class="tool-btn" data-type="video">
+                </div>
+                <div class="tool-btn" draggable="true" data-type="video">
                     <i class="fas fa-video"></i>
                     <span>영상</span>
-                </button>
-                <button class="tool-btn" data-type="list">
+                </div>
+                <div class="tool-btn" draggable="true" data-type="list">
                     <i class="fas fa-list-ul"></i>
                     <span>사업안내</span>
-                </button>
-                <button class="tool-btn" data-type="schedule">
+                </div>
+                <div class="tool-btn" draggable="true" data-type="schedule">
                     <i class="fas fa-calendar-alt"></i>
                     <span>일정</span>
-                </button>
-                <button class="tool-btn" data-type="map">
+                </div>
+                <div class="tool-btn" draggable="true" data-type="map">
                     <i class="fas fa-map-marker-alt"></i>
                     <span>지도</span>
-                </button>
-                <button class="tool-btn" data-type="link">
+                </div>
+                <div class="tool-btn" draggable="true" data-type="link">
                     <i class="fas fa-link"></i>
                     <span>링크 버튼</span>
-                </button>
-                <!--
-                <button class="tool-btn" data-type="divider">
-                    <i class="fas fa-minus"></i>
-                    <span>구분선</span>
-                </button>
-                -->
+                </div>
             </div>
 
             <div class="action-buttons">
