Change password inputs to text type to ensure leading zeros are visible and preserved

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label>비밀번호 (4자리, 숫자 방지용)</label>
-                    <input type="password" id="np-password" maxlength="4" placeholder="숫자 4자리">
+                    <label>비밀번호 (4자리, 숫자/문자)</label>
+                    <input type="text" id="np-password" maxlength="4" placeholder="0000">
                 </div>
 
                 <div class="form-group">
@@ -176,7 +176,7 @@
             <h3 id="save-modal-title">저장 및 발행</h3>
             <div class="form-group">
                 <label>페이지 비밀번호 (4자리)</label>
-                <input type="password" id="save-password" maxlength="4" placeholder="1234">
+                <input type="text" id="save-password" maxlength="4" placeholder="1234">
             </div>
             <div class="modal-actions">
                 <button id="confirm-save" class="primary-btn">확인</button>
