Replace prompt with Verify Password Modal to fix leading zero issue

--- a/index.html
+++ b/index.html
@@ -185,6 +185,21 @@
         </div>
     </div>
 
+    <!-- Modal for Password Verification (Edit Access) -->
+    <div id="verify-modal" class="modal hidden">
+        <div class="modal-content sm">
+            <h3>프로젝트 편집 접근</h3>
+            <div class="form-group">
+                <label>비밀번호 입력</label>
+                <input type="text" id="verify-password" maxlength="4" placeholder="0000">
+            </div>
+            <div class="modal-actions">
+                <button id="confirm-verify" class="primary-btn">확인</button>
+                <button id="cancel-verify" class="secondary-btn">취소</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Modal for Publish Result (QR & URL) -->
     <div id="publish-modal" class="modal hidden">
         <div class="modal-content">
