Fix edit button logic and update version for cache busting

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>
         <?= metaTitle ? metaTitle : 'Mobile Content Builder' ?>
     </title>
+    <link rel="icon" href="data:,">
 
     <!-- Open Graph for Social Sharing -->
     <meta property="og:title" content="<?= metaTitle ? metaTitle : 'Mobile Content Builder' ?>" />
@@ -16,7 +17,7 @@
     <meta property="og:type" content="website" />
 
     <!-- Absolute Path to CSS for Apps Script Compatibility (Cache Busting) -->
-    <link rel="stylesheet" href="https://fitsociety-hue.github.io/gdebuild/style.css?v=1.1">
+    <link rel="stylesheet" href="https://fitsociety-hue.github.io/gdebuild/style.css?v=1.2">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
@@ -261,7 +262,7 @@
     </div>
 
     <!-- Absolute Path to JS for Apps Script Compatibility (Cache Busting) -->
-    <script src="https://fitsociety-hue.github.io/gdebuild/script.js?v=1.1"></script>
+    <script src="https://fitsociety-hue.github.io/gdebuild/script.js?v=1.2"></script>
 </body>
 
 </html>
