--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website" />
 
     <!-- Absolute Path to CSS for Apps Script Compatibility (Cache Busting) -->
-    <link rel="stylesheet" href="https://fitsociety-hue.github.io/gdebuild/style.css?v=1.2">
+    <link rel="stylesheet" href="./style.css?v=1.3">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
@@ -262,7 +262,7 @@
     </div>
 
     <!-- Absolute Path to JS for Apps Script Compatibility (Cache Busting) -->
-    <script src="https://fitsociety-hue.github.io/gdebuild/script.js?v=1.2"></script>
+    <script src="./script.js?v=1.3"></script>
 </body>
 
 </html>
